k8s/alloy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      nodeSelector:
        ru.dotaclassic/nodeType: "infra"
      containers:
        - name: alloy
          image: grafana/alloy:latest
          args:
            - run
            - /etc/alloy/config.alloy
          ports:
            - containerPort: 12347
              name: faro
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
      volumes:
        - name: config
          configMap:
            name: alloy-config
