k8s/alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
spec:
  type: ClusterIP
  selector:
    app: alloy
  ports:
    - port: 12347
      targetPort: 12347
      name: faro
