k8s/alloy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-ingress
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_ISSUER}
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - logsink.${HOST}
      secretName: alloy-tls
  rules:
    - host: logsink.${HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  number: 12347
